# minirust

./: .gitattributes  .gitignore  Cargo.toml  README.md
ast/: Cargo.toml
ast/src/: ctx.rs  err.rs  fmt.rs  lib.rs  macros.rs  tag.rs
cli/: Cargo.toml
cli/src/: main.rs
eval/: Cargo.toml
eval/src/: lib.rs
examples/: errors.mrs  example.foo  foo.foo  intro.mrs  main.foo  main.mrs  std.foo  test.mrs
examples/std/: conv.foo  conv.mrs  env.foo  env.mrs  file.foo  file.mrs  io.foo  io.mrs  proc.foo  proc.mrs  time.foo
ffi/: Cargo.toml
ffi/src/: lib.rs  translate.rs
ir/: Cargo.toml
ir/src/: debruijn.rs  lib.rs  resolve.rs
parse/: Cargo.toml
parse/src/: grammar.rs  lib.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
tests/: Cargo.toml
tests/macros/: Cargo.toml
tests/macros/src/: lib.rs
tests/src/: lib.rs  main_fn.rs
tests/util/: assert.mrs
typing/: Cargo.toml
typing/src/: dups.rs  eq.rs  infer.rs  lib.rs  proj.rs  useful.rs  usefulness.rs
