[workspace]

members = [
  # ast representation & commons
  "ast",
  # parsing 
  "parse",
  # resolves imports & transforms to debruijn ideces
  "ir",
  # type checking
  "typing",
  # ffi to rust
  "ffi",
  # interpreter
  "eval",
  # interpreter executable
  "cli",
  # tests
  "tests",
  "test-macros"
]
